raw/AGNESIA TATONTOS FEVOURA 6427 245150207111058/2024-11-14-08-20-21.ceg/compilation.txt
NT.java:22: error: <identifier> expected
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi, Double output ){
           ^
NT.java:22: error: '(' expected
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi, Double output ){
            ^
NT.java:28: error: not a statement
        output / 2; 
               ^
3 errors
Not compiled
